--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+asgiref==3.6.0
 Django==4.0
-psycopg2_binary==2.9.6
-djangorestframework==3.14.0
+django-cors-headers==3.14.0
 django-filter==23.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-nested-routers==0.93.4
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+packaging==23.1
+Pillow==9.5.0
+pluggy==1.0.0
+psycopg2-binary==2.9.6
+PyJWT==2.6.0
+pytest==7.3.1
 pytest-django==4.5.2
+pytz==2023.3
+sqlparse==0.4.3
+tomli==2.0.1
