--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,21 +6,10 @@ jobs:
     build-test:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
             - name: Injecting env vars
               run: |
-                echo "SECRET KEY=test_foo
-                      DATABASE_NAME=test_coredb
-                      DATABASE_USER=test_core
-                      DATABASE_PASSWORD=123qwe
-                      DATABASE_HOST=test_postagram_db
-                      DATABASE_PORT=5432
-                      POSTGRES_USER=test_core
-                      POSTGRES_PASSWORD=123qwe
-                      POSTGRES_DB=test_coredb
-                      ENV=TESTING
-                      DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
-                      " >> .env
+                echo "${{ secrets.TEST_SECRETS }}" >> .env
             - name: Building container
               run: |
                 docker-compose up -d --build
