--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,9 @@ jobs:
             - uses: actions/checkout@v3
             - name: Injecting env vars
               run: |
+                touch .env
                 echo "${{ secrets.TEST_SECRETS }}" >> .env
+                cat .env
             - name: Building container
               run: |
                 docker-compose up -d --build
