--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,12 +9,12 @@ jobs:
             - uses: actions/checkout@v3
             - name: Injecting env vars
               run: |
-                touch .env
                 echo "${{ secrets.TEST_SECRETS }}" >> .env
-                cat .env
             - name: Building container
               run: |
                 docker-compose up -d --build
+                docker-compose logs
             - name: Running Tests
               run: |
                 docker-compose exec -T api pytest
+                docker-compose logs
