--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,5 +16,5 @@ jobs:
                 docker-compose logs
             - name: Running Tests
               run: |
-                ls -la
+                cat .env
                 docker-compose exec -T api pytest
