--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,4 +32,5 @@ jobs:
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 passphrase: ${{ secrets.SSH_PASSPHRASE }}
                 script: |
-                  ./docker-ec2-deploy.sh
+                  pwd
+                  # ./docker-ec2-deploy.sh
