--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,5 +32,5 @@ jobs:
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 passphrase: ${{ secrets.SSH_PASSPHRASE }}
                 script: |
-                  ls -la
+                  ls -la reactdjangofullstack
                   # ./docker-ec2-deploy.sh
