--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.3",
     "@faker-js/faker": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.1.0",
     "axios": "^1.4.0",
     "axios-auth-refresh": "^3.3.6",
+    "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -23,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
@@ -47,8 +51,13 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.1",
     "jest-localstorage-mock": "^2.4.26",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1"
   },
   "jest": {
     "resetMocks": false
