--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -27,4 +27,4 @@ jobs:
                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                 aws-region: eu-central-1
             - name: Deploy to S3 bucket
-              run: aws s3 sync ./build/ s3://postagram-dmytro-torianik --delete
+              run: aws s3 sync ./dist/ s3://postagram-dmytro-torianik --delete
